src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-ofT-dwU-dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-floating true\n    default-column-width {  }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]
